--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+logging.level.org.zalando.logbook=TRACE
+logging.level.org.zalando.logbook.servlet=TRACE
+logging.level.org.zalando.logbook.spring=TRACE
