--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-logging.level.org.zalando.logbook=TRACE
-logging.level.org.zalando.logbook.servlet=TRACE
-logging.level.org.zalando.logbook.spring=TRACE
+logging.level.org.zalando.logbook=DEBUG
+logging.level.org.zalando.logbook.servlet=DEBUG
+logging.level.org.zalando.logbook.spring=DEBUG
