--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,13 @@ logging.level.org.zalando.logbook.servlet=DEBUG
 logging.level.org.zalando.logbook.spring=DEBUG
 
 
-spring.sql.init.mode=always
-spring.datasource.url=jdbc:h2:file:./db/filmorate
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=none
+spring.sql.init.mode=always
+spring.sql.init.continue-on-error=true
 
 
 
