--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 logging.level.org.zalando.logbook=DEBUG
-
+logging.level.org.zalando.logbook.servlet=DEBUG
+logging.level.org.zalando.logbook.spring=DEBUG
 
 
 spring.sql.init.mode=always
@@ -7,6 +8,7 @@ spring.datasource.url=jdbc:h2:file:./db/filmorate;AUTO_SERVER=TRUE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+
 
 
 
