--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,13 @@ logging.level.org.zalando.logbook.spring=DEBUG
 
 
 spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:schema.sql
 spring.datasource.url=jdbc:h2:file:./db/filmorate;AUTO_SERVER=TRUE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
-spring.sql.init.continue-on-error=true
+# ??????? ??? ???? ?????? ???? ????? ? ???
+#spring.sql.init.continue-on-error=true
 
 
 
